--- a/environment.yml
+++ b/environment.yml
@@ -5,5 +5,5 @@ dependencies:
   - torch>=1.6.0
   - tqdm
   - tokenizers
-  - transformers<5.0.0>=4.6.0
+  - transformers>=4.6.0
   - sentence_transformers
