--- a/environment.yml
+++ b/environment.yml
@@ -2,7 +2,7 @@ name: example-environment
 channels:
   - conda-forge
 dependencies:
-  - torch>=1.6.0
+  - torch
   - tqdm
   - tokenizers
   - transformers>=4.6.0
